# neuroposelib

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  environment_FI.yml  environment_osx.yml  pyproject.toml  setup.py
.github/: CODEOWNERS
configs/: tutorial.yaml
configs/param_configs/: fitsne.yaml
configs/path_configs/: example_path.yaml
configs/skeletons/: demo_mouse.yaml
dappy/: DataStruct.py  abomination.py  analysis.py  babel_analysis.py  embed.py  features.py  float32.py  for_tianqing.py  histology_analysis.py  histology_vals_no24.xlsx  interface.py  joint_aug.py  kpms.py  no_aug.py  noise_aug.py  prediction_by_sigma.py  r01_small.py  read.py  run.py  skeletons.py  synthetic_rat.py  validation.py  vigor_aug.py  visualization.py  write.py
data/: demo_meta.csv
src/: DataStruct.py  DataStruct_old.py  analysis.py  behavior_heuristics.py  cluster_val.py  dstruct.py  embed.py  features.py  features_test.ipynb  features_test.py  float32.py  histology.py  histology_analysis.py  interface.py  load_data.py  morlet_test.ipynb  plot2DProjection.py  read.py  skeletons.py  skeletons_plot.py  tadross_16.ipynb  tadross_16.py  test_script.py  test_validation.py  validation.py  visualization.py  write.py
src/dappy/: DataStruct.py  __init__.py  analysis.py  augmentations.py  embed.py  features.py  float32.py  interface.py  preprocess.py  read.py  run.py  skeletons.py  utils.py  visualization.py
src/dappy/vis/: pose.py
src/neuroposelib/: DataStruct.py  __init__.py  analysis.py  augmentations.py  embed.py  features.py  preprocess.py  read.py  write.py
tests/: fbpca_test.py  filter_tests.py  float32.py  import_test.py  import_time.py  plot_pose.ipynb  vis_test.py
tutorials/: automated_pipeline.py  filter_tests.py  histology.py  histology_analysis.py  histology_filtered.py  set_up.ipynb  tadross_16.py  tutorial.ipynb
(+7 files in other folders)
