[project]
name = "neuroposelib"
version = "0.2_dev"
authors = [
  { name="Joshua H. Wu", email="joshua.wu@duke.edu" },
]
description = "3D Behavioral Analysis of Action Skeletons"
readme = "README.md"
requires-python = ">=3.8"
license ={file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/joshuahwu/dappy"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [project.optional-dependencies]
# docs = [
#     "mkdocs",
#     "mkdocstrings[python]",
#     "mkdocs_section_index",
#     "mkdocs_gen_files",
#     "mkdocs_literate_nav",
#     "mkdocs-gallery",
# ]